getting ready to add the group feature to the guesses page

--- a/views/signup.erb
+++ b/views/signup.erb
@@ -26,10 +26,10 @@
 
   <div>
     <label>Group</label>
-      <input type="radio" name="group" value="Water"> Rivadeneiras<br>
-      <input type="radio" name="group" value="Water"> WDI<br>
-      <input type="radio" name="group" value="Water"> DC Friends<br>
-      <input type="radio" name="group" value="Water"> Sankalpita<br>
+      <input type="radio" name="group" value="Rivadeneiras"> Rivadeneiras<br>
+      <input type="radio" name="group" value="Wdi"> WDI<br>
+      <input type="radio" name="group" value="DC Friends"> DC Friends<br>
+      <input type="radio" name="group" value="Sankalpita"> Sankalpita<br>
 
   </div> <br>
 
