--- a/views/layout.erb
+++ b/views/layout.erb
@@ -17,7 +17,6 @@
 			<li> <a href="/login">Log In</a> </li>
 			<li> <a href="/signup">Sign Up</a> </li>
 			<li> <a href="/concept">Rate</a> </li>
-			<li> <a href="/group">Select Game</a> </li>
 			<li> <a href="/guess">Guess</a> </li>
 			<li> <a href="/leaderboard">Leaderboard</a> </li>
 			<li> <a href="/clear">Log Out</a> </li>
@@ -64,7 +63,7 @@
 
 		<%end%>
 
-	<br> You are currently playing with:
+	<br> You are currently playing with the <b> <%= @current_user.group %> Group.</b>
 
 	<% end %>
 
