group feature working

--- a/views/leaderboard.erb
+++ b/views/leaderboard.erb
@@ -12,9 +12,11 @@
 
 <%end %> 
 
-<% count = 0 %>
-<% names.each do |name| %>
+scores.
 
-	<%= "#{scores[count]} #{name} <br>" %>
+<% count = 0 %>
+<% scores.each do |score| %>
+
+	<%= "#{names[count]} #{score} <br>" %>
 	<% count += 1 %>
 <% end %>
