--- a/views/signup.erb
+++ b/views/signup.erb
@@ -25,7 +25,7 @@
   </div>  <br>
 
   <div>
-    <label>Group</label>
+    <legend>Group</legend>
       <input type="radio" name="group" value="Rivadeneiras"> Rivadeneiras<br>
       <input type="radio" name="group" value="Wdi"> WDI<br>
       <input type="radio" name="group" value="DC Friends"> DC Friends<br>
