fixed leaderboard bug

--- a/views/leaderboard.erb
+++ b/views/leaderboard.erb
@@ -12,11 +12,9 @@
 
 <%end %> 
 
-scores.
-
 <% count = 0 %>
-<% scores.each do |score| %>
+<% names.each do |name| %>
 
-	<%= "#{names[count]} #{score} <br>" %>
+	<%= "#{scores[count]} #{name} <br>" %>
 	<% count += 1 %>
 <% end %>
