--- a/views/>.erb
+++ b/views/>.erb
@@ -1,5 +1,5 @@
 <div id="message">
-	Hi, everyone!  Welcome to my first web app!  I am still testing and building features, and I welcome your feedback.  This product is at a very early development stage.
+	<p>Hi, everyone!  Welcome to my first web app!  I am still testing and building features, and I welcome your feedback.  This product is at a very early development stage.</p>
 
 	<p>-- Alex</p>
 </div>
