--- a/views/guess.erb
+++ b/views/guess.erb
@@ -1,6 +1,8 @@
 
+
 <div id="guesses">
 <!-- shows previous guesses and their outcomes -->
+
 
     <% @where_user_guessed.each do |guess| %>
         <% concept_user_rating = guess.concept_user_id %>
@@ -14,8 +16,9 @@
 
         <div id="<%=outcome%>">
 
-            <%= "#{what_you_guessed_on_user}  #{convert_rating(what_you_guessed_on_rating)} #{what_you_guessed_on_concept}. You were  #{convert_bool(outcome)}." %>
+                <%= "#{what_you_guessed_on_user}  #{convert_rating(what_you_guessed_on_rating)} #{what_you_guessed_on_concept}. You were  #{convert_bool(outcome)}." %>
         </div>
+     
 
     <% end %>
 
@@ -25,6 +28,13 @@
 
 <div id="make_ratings">
 <!-- where the user can make more guesses -->
+
+    <% if @ratings_where_user_not_rated == [] %>
+
+    <div id="rating">
+        <%= "Waiting for your friends to make more ratings..." %>  
+
+    <%else%>
 
     <% @ratings_where_user_not_rated.each do |rating| %>
     <%	user_id = ConceptUser.find(rating).user_id %>
@@ -65,4 +75,19 @@
     <%end%>
 
 
+
+
 </div>
+
+<%end%>
+
+
+<script>
+$('#guesses > #true' ).each(function() {
+    $(this).prependTo(this.parentNode);
+});
+
+$('#guesses > #false' ).each(function() {
+    $(this).prependTo(this.parentNode);
+});
+</script>
