--- a/views/layout.erb
+++ b/views/layout.erb
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<link href='http://fonts.googleapis.com/css?family=Arvo:400,700' rel='stylesheet' type='text/css'>
+	<script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 	<link type="text/css" rel="stylesheet" href="/styles.css">
 	<title>Head to Head! <%= "#{@page_name}" %></title>
 </head>
