--- a/views/leaderboard.erb
+++ b/views/leaderboard.erb
@@ -1,3 +1,8 @@
+		<% where_guessed = Guest.where user_id: @current_user.id %> 
+
+		<% attempts = where_guessed.length %>
+
+
 
 <% "#{@scores_array}" %>
 
@@ -15,6 +20,8 @@
 <% count = 0 %>
 <% names.each do |name| %>
 
-	<%= "#{scores[count]} #{name} <br>" %>
+	<%= "#{scores[count]} #{name} -- with #{(Guest.where user_id:(User.find_by(name: name).id)).length} attempts made<br>" %>
 	<% count += 1 %>
 <% end %>
+
+
