--- a/views/guess.erb
+++ b/views/guess.erb
@@ -83,9 +83,8 @@
 
 
 <script>
-$('#guesses > #true #false' ).each(function() {
+$('#guesses > div ' ).each(function() {
     $(this).prependTo(this.parentNode);
 });
-
 
 </script>
